force-app/main/default/objects/Enrrolment__c/Enrrolment__c.object-meta.xml
<CustomObject>
    <label>Enrrolment</label>
    <nameField>
        <displayFormat>Enrollment -{0000}</displayFormat>
        <label>Enrrolment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrrolments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>