force-app/main/default/objects/Enrrolment__c/fields/enrrolment_Date__c.field-meta.xml
<CustomField>
    <fullName>enrrolment_Date__c</fullName>
    <label>enrrolment Date</label>
    <type>Date</type>
</CustomField>